shift to material

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,13 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "30.0.0-rc4"
     defaultConfig {
         applicationId "com.shakirfattani.course.movielisting"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -26,9 +25,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
-
-    implementation "androidx.appcompat:appcompat:1.1.0"
-    implementation "com.google.android.material:material:1.2.0-alpha02"
-    implementation "androidx.preference:preference:1.1.0"
+    implementation "com.google.android.material:material:1.2.0-alpha06"
+    implementation "androidx.preference:preference:1.1.1"
     implementation 'com.squareup.picasso:picasso:2.5.2'
 }
